# apex-arrhythmia-explainer

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/backend/: main.py
app/frontend/: app.py
data/: README.md
docs/: problem_statement.md  target_metrics.md
docs/baseline/: baseline_summary.md  headline_metrics.json  val_per_label_auroc.csv
docs/eda/: code_prevalence.csv  summary.md  superclass_prevalence.csv
docs/generation/: dataset_card.md  examples_review.md  review_candidates.json  sample_examples.jsonl
docs/grounding/: ecg16851.json  ecg18550.json  ecg8392.json  sanity_check.md  scan_AFIB.json  scan_STTC.json
docs/model_comparison/: comparison.md  runs.jsonl
docs/reliability/: report.json  report.md
docs/serving/: sample_report.json  schema.md
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  README.md
scripts/: build_comparison.py  build_gen_dataset.py  download_ptbxl.py  fetch_sample_records.py  init_wandb.py  run_eda.py  run_experiments.sh  run_grounding.py  run_reliability_report.py  select_review_examples.py
src/: __init__.py  config.py
src/data/: eda.py  labels.py  manifests.py
src/detection/: data_cache.py  dataset.py  losses.py  model.py  train.py
src/eval/: consistency.py  hallucination.py  metrics.py  reliability.py
src/generation/: dataset.py  inference.py  parse.py  prompts.py  templater.py  train_lora.py  vocab.py
tests/: test_eval.py  test_generation.py  test_grounding.py  test_losses.py  test_manifests.py  test_model.py  test_preprocessing.py  test_reliability.py  test_serving.py
(+25 files in other folders)
